--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 
     <!-- styles -->
     <link rel="stylesheet" href="styles.css" />
-  </head>
+  </head> 
   <body>
+    <!-- header  -->
     <h1>video project</h1>
     <!-- javascript -->
     <script src="app.js"></script>
