--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   </head> 
   <body>
     <!-- header  -->
+    <header>
+      <video src=""></video>
+    </header>
     <h1>video project</h1>
     <!-- javascript -->
     <script src="app.js"></script>
