--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <!-- header  -->
     <header>
-      <video src=""></video>
+      <video></video>
     </header>
     <h1>video project</h1>
     <!-- javascript -->
