--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <body>
     <!-- header  -->
     <header>
-      <video></video>
+      <video>
+        <source src="">
+      </video>
     </header>
     <h1>video project</h1>
     <!-- javascript -->
