--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- header  -->
     <header>
       <video>
-        <source src="">
+        <source src="./video.mp4">
       </video>
     </header>
     <h1>video project</h1>
