--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <!-- header  -->
     <header>
-      <video class="video-container">
+      <video class="video-container" controls muted autoplay loop>
         <source src="./video.mp4" type="video/mp4">
       </video>
     </header>
