--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       </video>
       <h1>video project</h1>
     </header>
+    <!-- video switch -->
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
