--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <h1>video project</h1>
     </header>
     <!-- video switch -->
+    <button></button>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
