--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
       <h1>video project</h1>
     </header>
     <!-- video switch -->
-    <button class="switch-btn"></button>
+    <button class="switch-btn">
+      <span></span>
+    </button>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
