--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <!-- video switch -->
     <button class="switch-btn">
-      <span></span>
+      <span>play</span>
     </button>
     <!-- javascript -->
     <script src="app.js"></script>
