--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <!-- video switch -->
     <button class="switch-btn">
       <span>play</span>
+      <span>pause</span>
+      <span class="switch"></span>
     </button>
     <!-- javascript -->
     <script src="app.js"></script>
