--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head> 
   <body>
+    <!-- preloader -->
     <!-- header  -->
     <header>
       <video class="video-container"  muted autoplay loop>
