--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   </head> 
   <body>
     <!-- preloader -->
+    <div class="preloader">
+      
+    </div>
     <!-- header  -->
     <header>
       <video class="video-container"  muted autoplay loop>
