--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <!-- preloader -->
     <div class="preloader">
-      
+      <img src="" alt="">
     </div>
     <!-- header  -->
     <header>
