--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <!-- preloader -->
     <div class="preloader">
-      <img src="./preloader.gif" alt="">
+      <img src="./preloader.gif" alt="preloader">
     </div>
     <!-- header  -->
     <header>
